[tool.poetry]
name = "syncshell"
version = "1.0.6"
description = "Keep your machine's shell history synchronized."

license = "MIT"

authors = ["Masoud Ghorbani <msud.ghorbani@gmail.com>"]

readme = "README.md"

repository = "https://github.com/msudgh/syncshell"
homepage = "https://github.com/msudgh/syncshell"

keywords = ["sync", "shell", "history", "bash", "zsh"]

[tool.poetry.dependencies]
python = "^3.8.16"
black = "23.3.0"
fire = "0.5.0"
flake8 = "6.0.0"
halo = "0.0.31"
PyGithub = "1.59.0"
pytest = "7.4.0"
pytest-testdox = "^3.0.1"
pathlib = "^1.0.1"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | dist
)/
'''

# Ref: https://python-poetry.org/docs/pyproject/#scripts
[project.scripts]
syncshell = "syncshell.__main__:main"
