[tool.poetry]
name = "syncshell"
version = "v1.0.7"
description = "Keep your machine's shell history synchronized"
license = "MIT"
authors = ["Masoud Ghorbani <masoudghorbani@pm.me>"]
readme = "README.md"
repository = "https://github.com/msudgh/syncshell"
homepage = "https://github.com/msudgh/syncshell"
keywords = ["sync", "shell", "history", "bash", "zsh"]
include = [
    { path = ".syncshell.ini", format = "wheel" },
    { path = "README.md", format = "wheel" },
    { path = "pyproject.toml", format = "wheel" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: System :: Shells",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.8.16"
fire = "0.5.0"
halo = "0.0.31"
PyGithub = "1.59.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "23.7.0"
pytest = "7.4.2"
pytest-testdox = "^3.0.1"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | dist
)/
'''

# Ref: https://python-poetry.org/docs/pyproject/#scripts
[tool.poetry.scripts]
syncshell = "syncshell.cli:main"
