[tool.poetry]
name = "syncshell"
version = "v1.0.8"
description = "Keep your machine's shell history synchronized"
license = "MIT"
authors = ["Masoud Ghorbani <masoudghorbani@pm.me>"]
readme = "README.md"
repository = "https://github.com/msudgh/syncshell"
homepage = "https://github.com/msudgh/syncshell"
keywords = ["sync", "shell", "history", "bash", "zsh"]
include = [
    { path = ".syncshell.ini", format = "wheel" },
    { path = "README.md", format = "wheel" },
    { path = "pyproject.toml", format = "wheel" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: System :: Shells",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.8.18"
fire = "0.6.0"
halo = "0.0.31"
PyGithub = "2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
pytest-testdox = "^3.0.1"
ruff = ">=0.1.5,<0.5.0"
pre-commit = "^3.5.0"

# Ref: https://python-poetry.org/docs/pyproject/#scripts
[tool.poetry.scripts]
syncshell = "syncshell.cli:main"
